fix signup form alignment with flexbox

--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -40,6 +40,7 @@
 
 
 .signin-header {
+  width: 78%;
   font-family: sans-serif;
   font-weight: bold;
   font-size: 25px;
@@ -107,6 +108,7 @@
   font-family: sans-serif;
   color: grey;
   flex-direction: row;
+  width: 78%;
 }
 
 .signup-link{
